# tai

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: build.yml
assets/: Info.plist  tai.icns
scripts/: build.sh  bundle.sh  run.sh
src/: config.rs  main.rs  minimap.rs  overlay.rs  router.rs  selection.rs  session.rs  split.rs  status_bar.rs  tab.rs  tab_bar.rs  workspace.rs
src/ai/: bridge.rs  client.rs  context.rs  conversation.rs  mod.rs  tools.rs
src/terminal/: backend.rs  engine.rs  input.rs  mod.rs  pty.rs  renderer.rs  ssh.rs
tai/: Cargo.toml
tai/src/: config.rs  main.rs
tai/src/ai/: auth.rs  bridge.rs  client.rs  context.rs
tai/src/terminal/: engine.rs  mod.rs
