[package]
name = "tai"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib = "5.5"
tokio = { version = "1", features = ["full"] }
async-openai = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["process", "term", "fs"] }
libproc = "0.14"
dirs = "6"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
tokio-stream = "0.1"

[build-dependencies]
bindgen = "0.71"
